syntax = "proto3";
package nbcontract.v1;

// Kube Binary Config
message KubeBinaryConfig {
  //default kube binary url
  string kube_binary_url = 1;

  //user's custom kube binary url
  string custom_kube_binary_url = 2;
   
  //privately cached kube binary url
  string private_kube_binary_url = 3;  
  
  //full path to the "pause" image. Used for --pod-infra-container-image.
  string pod_infra_container_image_url = 4;

  // Full path to the Linux credential provider (tar.gz) to use.
  string linux_credential_provider_url = 5;
}